--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,11 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-web-services')
     compile('org.springframework.boot:spring-boot-starter-websocket')
-    compile('org.springframework.data:spring-data-rest-hal-browser')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('com.google.code.gson:gson:2.6.2')
-    compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+    compile('org.springframework.data:spring-data-rest-hal-browser')
+    compile('com.google.code.gson:gson:2.8.2')
+    runtime('org.springframework.boot:spring-boot-devtools')
+    runtime('org.postgresql:postgresql')
 
 //    runtime('org.postgresql:postgresql:41.1.1')
     testCompile('org.springframework.boot:spring-boot-starter-test')
