--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,28 @@
 ## Spring DATASOURCE
-spring.datasource.url=jdbc:postgresql://localhost:5432/Raspberry
-spring.datasource.username=postgres
-spring.datasource.password=Database12
-spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/Raspberry
+#spring.datasource.username=postgres
+#spring.datasource.password=Database12
+#spring.datasource.driverClassName=org.postgresql.Driver
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL92Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL92Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+## Spring DATASOURCE
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/Raspberry
+spring.datasource.username=postgres
+spring.datasource.password=Database12
+
+## Hibernate Properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL92Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
