--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web-services')
     compile('org.springframework.boot:spring-boot-starter-websocket')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.springframework.data:spring-data-rest-hal-browser')
+//    compile('org.springframework.data:spring-data-rest-hal-browser')
     compile('com.google.code.gson:gson:2.8.2')
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('org.postgresql:postgresql')
