--- a/build.gradle
+++ b/build.gradle
@@ -40,4 +40,8 @@ dependencies {
 
 //    runtime('org.postgresql:postgresql:41.1.1')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
+//    apache for posting data
+    compile 'org.apache.httpcomponents:httpcore:4.4.1'
+    compile 'org.apache.httpcomponents:httpclient:4.5'
 }
